--- a/templatemo_221_wall/index.html
+++ b/templatemo_221_wall/index.html
@@ -328,6 +328,8 @@
 	</div> <!-- end of templatemo_footer -->
 </div> <!-- end of templatemo_footer_wrapper -->
 
-
+<script type="text/javascript">
+ $("div#slider1").codaSlider()
+</script>
 </body>
 </html>
