--- a/templatemo_221_wall/index.html
+++ b/templatemo_221_wall/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>The Wall - cssMoban.com</title>
+<title>个人简历</title>
 <meta name="keywords" content="the wall, cssMoban.com, css templates, CSS, HTML" />
 <meta name="description" content="The Wall is a free website template provided from cssMoban.com" />
 <link href="animate.min.css" rel="stylesheet" type="text/css" />
